<resources>
    <string name="app_name">ShakePaws</string>
    <string name="or">or</string>
    <string name="log_in_with_gmail">Log in with Gmail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="are_you_new">Are you new?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="full_name">Full name</string>ç
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="userprofile">UserProfile</string>
    <string name="name">Name</string>
    <string name="full_name_">Full name</string>
    <string name="telphone_number">Telphone number</string>
    <string name="address">Address</string>
    <string name="mishell_tigse">Mishell Tigse</string>
    <string name="mishtigs_ucm_es">mishtigs@ucm.es</string>
    <string name="_34_620785383">+34 620785383</string>
    <string name="yliopistokatu_18">Yliopistokatu 18</string>
    <string name="save">Save</string>
    <string name="email">Email</string>

    <string name="shakepaws">shakepaws</string>
    <string name="logged_in">logged_in</string>
    <string name="years"> years</string>

    <string name="navigation_drawer_start">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="todo">todo</string>
    <string name="send_email">Send Email</string>

    <string name="title_activity_welcome">Hoem Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">LOG IN</string>

    <string name="slide_1_title">Hello Pet Lovers!</string>
    <string name="slide_1_desc">The easiest way to find a pet in need of a new home!</string>

    <string name="slide_2_title">Don\'t Abandon Me</string>
    <string name="slide_2_desc">Entrust your pet to the hands of a loving family instead of abandoning it!</string>

    <string name="slide_3_title">It\'s Free</string>
    <string name="slide_3_desc">Find great pets for free. No service fee charged!</string>

    <string name="slide_4_title">Share with Friends</string>
    <string name="slide_4_desc">Help us reach more people would you? Let your friends know!</string>

</resources>
